2010-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fix-illegal-blocks): New function.
	(w3m-rendering-buffer): Use it.

	* w3m-util.el (w3m-beginning-of-tag, w3m-end-of-tag): Move from
	shimbun/shimbun.el.

2010-12-13  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-external-view): Execute default web browser insted of
	download if content-type is not supported.

2010-12-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-print-this-url, w3m-print-this-image-url):
	Fix "no url" message.  Suggested by Dan Jacobson <jidanni@jidanni.org>.

2010-12-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-session.el (w3m-session-crash-recovery-remove):
	Add autoload cookie.

2010-12-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-input-url): Return nil for empty url.
	(w3m-view-url-with-external-browser): Prompt user to edit url, not to
	answer y/n.  Suggested by Dan Jacobson <jidanni@jidanni.org>.

2010-11-03  Kevin Ryde  <user42@zip.com.au>

	* w3m-util.el (w3m-condition-case): Add a missing quote
	([emacs-w3m:11405]).

2010-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* bookmark-w3m.el (bookmark-make-record-function): Don't bind it to any
	value.  Suggested by David Engster ([emacs-w3m:11395]).

2010-10-13  IRIE Shinsuke  <irieshinsuke@yahoo.co.jp>

	* w3m-ems.el (w3m-tab-previous-buffer): Work when called interactively
	with no arg.

2010-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Load bookmark-w3m for Emacs >=23.

	* w3mhack.el (w3mhack-module-list): Exclude bookmark-w3m.el from
	compilation under Emacs <23 and XEmacs.

	* bookmark-w3m.el: Provide the feature; add comment.
	(bookmark-w3m-bookmark-jump): Add autoload cookie.

2010-10-08  Masatake YAMATO  <yamato@redhat.com>

	* bookmark-w3m.el: New file.

2010-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-make-local-hook): New function.

	* mime-w3m.el (mime-display-message)
	* w3m-mail.el (w3m-mail-compose-with-vm)